# routes/income.js
@@ -1,9 +1,9 @@
-const express = require("express");
-const router = express.Router();
+const router = require("express").Router();
+const incomeController = require("../controllers/income");
+
 const { incomeValidation, validate } = require("../utils/validation.js");
 const utilities = require("../utils");
-
-const incomeController = require("../controllers/income");
+const { isAuthenticated } = require("../utils/authenticate.js");
 
 router.get("/", utilities.handleErrors(incomeController.getAll));
 
@@ -11,6 +11,7 @@ router.get("/:id", utilities.handleErrors(incomeController.getSingle));
 
 router.post(
   "/",
+  isAuthenticated,
   incomeValidation(),
   validate,
   utilities.handleErrors(incomeController.createIncome)
@@ -18,11 +19,16 @@ router.post(
 
 router.put(
   "/:id",
+  isAuthenticated,
   incomeValidation(),
   validate,
   utilities.handleErrors(incomeController.updateIncome)
 );
 
-router.delete("/:id", utilities.handleErrors(incomeController.deleteIncome));
+router.delete(
+  "/:id",
+  isAuthenticated,
+  utilities.handleErrors(incomeController.deleteIncome)
+);
 
 module.exports = router;
